spacing menu items fix

--- a/source/stylesheets/modules/_menu.sass
+++ b/source/stylesheets/modules/_menu.sass
@@ -38,7 +38,7 @@
       li
         font-size: 18px
         font-weight: 100
-        padding: 24px 0
+        padding: 18px 0
         color: white
   .logo
     position: absolute
